syntax = "proto3";

package proto;

message Output {
	string PlainText = 1;
}
